@@ -1,3 +1,12 @@
+2010-09-01  Andreas Kupries  <andreask@activestate.com>
+
+	* Makefile.in: [Bug 865278] Semi-applied Don Porter's patch adding
+	code which prevents the package from registering with Tcl
+	interpreters which cannot load it, i.e. below the version it was
+	compiled against. Semi because the pkgIndex.in in his patch is
+	not used, the pkgIndex.tcl is generated by the Makefile(.in).
+	* pkgIndex.in: Removed. File not used.
+
 2010-08-31  Andreas Kupries <andreask@activestate.com>
 
 	* Various cleanups, local patches of ActiveState.
